--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "files": [
     "dist"
   ],
-  "dependencies": {},
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
@@ -29,7 +28,8 @@
     "rollup": "^2.75.0",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "dotenv": "^16.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
