--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "web3bio-profile-kit",
   "version": "0.1.0",
   "description": "React hooks for querying Web3.bio profiles",
+  "author": "web3bio",
+  "license": "MIT",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -9,54 +11,46 @@
   "files": [
     "dist"
   ],
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+  "sideEffects": false,
+  "keywords": [
+    "web3",
+    "profile",
+    "react",
+    "hooks",
+    "web3bio",
+    "ens",
+    "farcaster",
+    "lens"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/web3bio/web3bio-profile-kit"
   },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react-scripts": "5.0.1",
-    "@types/react": "^18.0.0",
-    "react": "^19.1.0",
-    "rimraf": "^5.0.5",
-    "rollup": "^2.75.0",
-    "rollup-plugin-dts": "^4.2.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "typescript": "^4.9.5",
-    "dotenv": "^16.5.0"
+  "homepage": "https://github.com/web3bio/web3bio-profile-kit#readme",
+  "bugs": {
+    "url": "https://github.com/web3bio/web3bio-profile-kit/issues"
   },
   "scripts": {
     "build": "rimraf dist && rollup -c",
     "test": "react-scripts test",
     "prepublishOnly": "npm run build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
-  "keywords": [
-    "web3",
-    "profile",
-    "react",
-    "hooks",
-    "web3bio"
-  ],
-  "author": "web3bio",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/web3bio/web3bio-profile-kit"
-  },
-  "bugs": {
-    "url": "https://github.com/web3bio/web3bio-profile-kit/issues"
-  },
-  "homepage": "https://github.com/web3bio/web3bio-profile-kit#readme"
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.5",
+    "rollup": "^3.25.0",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "typescript": "^5.0.0"
+  }
 }
