--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web3bio-profile-kit",
-  "version": "0.1.1",
-  "description": "React hooks for querying Web3.bio profiles",
+  "version": "0.1.2",
+  "description": "React hooks for querying ENS, Farcaster, Lens and Web3 universal profiles",
   "author": "web3bio",
   "license": "MIT",
   "private": false,
