--- a/examples/package.json
+++ b/examples/package.json
@@ -12,7 +12,8 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "web3bio-profile-kit": "^0.1.4"
+    "web3bio-profile-kit": "^0.1.4",
+    "@tanstack/react-query": "^5.79.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
