--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
+    "@tanstack/react-query": "^4.0.0 || ^5.0.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
@@ -93,6 +94,7 @@
     "rollup": "^3.29.5",
     "rollup-plugin-dts": "^5.3.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@tanstack/react-query": "^5.79.2"
   }
 }
